--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -63,13 +63,13 @@
 <footer class="bs-docs-footer">
   <div class="col-md-12">
     <p>
-    <a href="#">关于本站</a>
-    <a href="#">廉正举报</a>
-    <a href="#">开放平台</a>
-    <a href="#">诚征英才</a>
-    <a href="#">联系我们</a>
-    <a href="#">网站地图</a><br/><br/>
-    <em>Copyright © 2018 西安工业大学 All Rights Reserved</em>
+<!--    <a href="#">关于本站</a>-->
+<!--    <a href="#">廉正举报</a>-->
+<!--    <a href="#">开放平台</a>-->
+<!--    <a href="#">诚征英才</a>-->
+<!--    <a href="#">联系我们</a>-->
+    <a href="#">地址：江西省宜春市学府路576号 邮政编码：336000</a><br/><br/>
+    <em>Copyright © 2022 宜春学院 叶涛 All Rights Reserved</em>
     </p>
 
   </div>
