--- a/src/main/resources/static/pages/myCenter.html
+++ b/src/main/resources/static/pages/myCenter.html
@@ -26,7 +26,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li class="navli"><a href="#">欢迎！</a></li>
+          <li class="navli"><a href="#">欢迎登录酒店管理系统！</a></li>
           <li class="navli"><a href="../index.html">退出</a></li>
         </ul>
     </div>
