--- a/src/main/resources/static/pages/staff_room.html
+++ b/src/main/resources/static/pages/staff_room.html
@@ -57,11 +57,11 @@
             <input type="text" name="inputId" class="form-control" id="inputId">
           </div>
           <div class="form-group alterinfo">开始日期：
-            <label for="inputStart">inputId</label>
+            <label for="inputStart">inputStart</label>
             <input type="text" name="inputStart" class="form-control"  data-provide="datepicker" id="dateStart">
           </div>
           <div class="form-group alterinfo">结束日期：
-            <label for="inputEnd">inputId</label>
+            <label for="inputEnd">inputEnd</label>
             <input type="text" name="inputEnd" class="form-control" data-provide="datepicker" id="dateEnd">
           </div>
           <div class="form-group alterinfo">
